--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     ]
   },
   "dependencies": {
+    "ajv": "^6.5.4",
     "fetch-mock": "^6.5.0",
     "mocha-multi": "^1.0.1",
     "node-fetch": "^2.1.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "semantic-ui-css": "^2.4.0",
     "webpack": "^3.11.0"
   },
   "scripts": {
@@ -32,9 +34,14 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
+    "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "file-loader": "^2.0.0",
     "mocha": "^5.2.0",
-    "sinon": "^6.1.0"
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "sinon": "^6.1.0",
+    "url-loader": "^1.1.2"
   }
 }
